objects/ssot__ForecastingItemHistoricalTrend__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastingItemId__c</fullName>
        <label>Forecasting Item</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HistoricalForecastAmount__c</fullName>
        <label>DoNotUse</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__HistoricalForecastAmt__c</fullName>
        <label>Historical Forecast Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__HistoricalForecastQuantity__c</fullName>
        <label>Historical Forecast Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__HistoricalOwnerOnlyAmount__c</fullName>
        <label>DoNotUseHistoricalOwnerOnlyAmount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__HistoricalOwnerOnlyAmt__c</fullName>
        <label>Historical Owner Only Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__HistoricalOwnerOnlyQuantity__c</fullName>
        <label>Historical Owner Only Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__HistoricalWithoutAdjustmentsAmount__c</fullName>
        <label>DoNotUseHistWithoutAdjstAmount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__HistoricalWithoutAdjustmentsAmt__c</fullName>
        <label>Historical Without Adjustments Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__HistoricalWithoutAdjustmentsQuantity__c</fullName>
        <label>Historical Without Adjustments Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__HistoricalWithoutManagerAdjAmount__c</fullName>
        <label>DoNotUseHistWithoutManagerAdjAmount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__HistoricalWithoutManagerAdjAmt__c</fullName>
        <label>Historical Without Manager Adj Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__HistoricalWithoutManagerAdjQuantity__c</fullName>
        <label>Historical Without Manager Adj Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Forecasting Item Historical Trend Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PriorForecastAmount__c</fullName>
        <label>DoNotUsePriorForecastAmount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PriorForecastAmt__c</fullName>
        <label>Prior Forecast Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__PriorForecastQuantity__c</fullName>
        <label>Prior Forecast Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PriorOwnerOnlyAmount__c</fullName>
        <label>DoNotUsePriorOwnerOnlyAmount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PriorOwnerOnlyAmt__c</fullName>
        <label>Prior Owner Only Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__PriorOwnerOnlyQuantity__c</fullName>
        <label>Prior Owner Only Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PriorWithoutAdjustmentsAmount__c</fullName>
        <label>DoNotUsePriorWithoutAdjustmentsAmount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PriorWithoutAdjustmentsAmt__c</fullName>
        <label>Prior Without Adjustments Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__PriorWithoutAdjustmentsQuantity__c</fullName>
        <label>Prior Without Adjustments Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PriorWithoutManagerAdjustmentAmount__c</fullName>
        <label>DoNotUsePriorWithoutManagerAdjAmount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PriorWithoutManagerAdjustmentAmt__c</fullName>
        <label>Prior Without Manager Adjustment Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__PriorWithoutManagerAdjustmentQuantity__c</fullName>
        <label>Prior Without Manager Adj Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SystemModstamp__c</fullName>
        <label>System Mod stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ValidFromDateTime__c</fullName>
        <label>Valid From Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ValidToDateTime__c</fullName>
        <label>Valid To Date Time</label>
        <type>DateTime</type>
    </fields>
</CustomObject>